<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cvn.cmsgd.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="-0dp"
        app:paddingEnd="8dp"
        app:paddingStart="8dp"
        app:tabBackground="@drawable/tab_bg_color"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorHeight="4dp"
        app:tabPaddingEnd="8dp"
        app:tabPaddingStart="8dp"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="#6DAABC"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/appbar"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="3dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/live_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@mipmap/ic_action_video"
            android:gravity="center"
            android:text="@string/live"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/video_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@mipmap/ic_action_youtube_us"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/interaction_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@mipmap/ic_action_share_2_us"
            android:gravity="center"
            android:text="@string/interaction"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/me_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:drawablePadding="-2dp"
            android:drawableTop="@mipmap/ic_action_user_us"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
